Create multiple moviments
